Closed Bug 333166 Opened 18 years ago Closed 18 years ago

When mouse cursor is on the plug-in but not focused, focused element will receive wheel event instead of plug-in

Categories

(Core :: Widget: Win32, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: emk, Assigned: emk)

Details

Attachments

(1 file)

Steps to reproduce:
1. Go to pages with Java applet.
2. Open bookmark sidebar (for places build, use location bar instead)
3. Click on the bookmark sidebar (or location bar) to focus it.
4. Move mouse cursor over the applet (but do not click).
5. Rotate the wheel.

Actual result:
Bookmark sidebar will scroll. If you are using location bar, you cannot see scroll, but location bar receives wheel event.

Expected result:
Applet should receive wheel event. You can easily see this if applet has a scrollable part.
Attached patch Patch rv 1.0Splinter Review
GetClassLongA doesn't return Unicode windows' wndproc as is.
Therefore the following if-statement would never be true.
Assignee: win32 → VYV03354
Status: NEW → ASSIGNED
Attachment #217603 - Flags: review?(emaijala)
Attachment #217603 - Flags: review?(emaijala) → review+
Attachment #217603 - Flags: superreview?(roc)
roc:
Could you sr the patch? This is a trivial one liner.
Attachment #217603 - Flags: superreview?(roc) → superreview+
checked-in.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: