Bug 333166 When mouse cursor is on the plug-in but not focused, focused element will receive wheel event instead of plug-in. patch by Masatoshi Kimura (:emk) <VYV03354@nifty.ne.jp> r=ere, sr=roc